glx/testdata/invalid/broken-references/assertions/assertion-john-birthplace.glx
assertions:
  assertion-john-birth-place:
    subject:
      person: person-john-smith-1850
    property: born_at
    value: place-leeds
    citations:
      - citation-john-birth
    confidence: high
    sources:
      - source-parish-leeds
    notes: "Birth place stated in parish register"
